--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 sudo: false
 jdk: oraclejdk8
-dist: trusty
+install: true
 
 cache:
   directories:
@@ -24,7 +24,6 @@ jobs:
         - mvn test -P integration-testing -B
     - stage: sonar
       script:
-        - sonar-scanner
-        - mvn test org.jacoco:jacoco-maven-plugin:prepare-agent sonar:sonar -B
+        - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
       after_success:
        - bash <(curl -s https://codecov.io/bash)
