--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ jobs:
         - mvn test -P integration-testing -B
     - stage: sonar
       script:
-        - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+        - mvn org.jacoco:jacoco-maven-plugin:prepare-agent sonar:sonar
       after_success:
        - bash <(curl -s https://codecov.io/bash)
