--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,11 @@ jobs:
   include:
     - stage: unit
       script:
-        - mvn test -P unit-testing -B
+        - mvn test -P unit-testing sonar:sonar -B
+     after_success:
+        - bash <(curl -s https://codecov.io/bash)
     - stage: integration
+    if: branch = master
       script:
         - mvn test -P integration-testing -B
-    - stage: sonar
-      script:
-        - mvn org.jacoco:jacoco-maven-plugin:prepare-agent sonar:sonar
-      after_success:
-       - bash <(curl -s https://codecov.io/bash)
+
